[package]
name = "sentinel-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = "0.13"

tokio = { version = "1", features = ["full"] }
clickhouse = "0.12"
serde = { version = "1", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
bytes = "1"
ring = "0.17"
sentinel-ebpf-common = { path = "../sentinel-ebpf-common" }

[build-dependencies]
anyhow = "1"
